# grpc_test

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
src/: client.cc  server.cc
src/protos/: test.proto
